Fix issue with jumping action buttons in WebKit browsers
Replace <caption> element from cockpit lists because of the following
reasons:
- it's buggy in WebKit
- it skips the a11y tree for headings
- we overload it with stuff that it isn't intended for

Fixes #12511
Closes #12552
Related to https://bugs.webkit.org/show_bug.cgi?id=187903.

--- a/pkg/docker/docker.css
+++ b/pkg/docker/docker.css
@@ -174,6 +174,10 @@ div.spinner {
     float: left;
 }
 
+#containers-images {
+    margin-top: 1rem;
+}
+
 #containers #containers-containers .table,
 #containers #containers-images .table,
 #image-details-containers .table {
